--- a/app/views/game/detail.html.erb
+++ b/app/views/game/detail.html.erb
@@ -1,63 +1,63 @@
 <%=render 'page_title', title: 'Game detail'%>
 <%= render 'page_title', title: 'GemKeK' %>
-<nav id="menu" class="navbar navbar-default navbar-fixed-top">
-  <div class="container">
-    <div class="col-md-3">
-      <a class="navbar-brand logo-header" href="#page-top">
-        <img src="/assets/logo.jpg" alt="logo">
-      </a>
-    </div>
-    <div class="collapse navbar-collapse col-md-9" id="bs-example-navbar-collapse-1 ">
-      <ul class="nav navbar-nav navbar-left">
-        <li><a href="#about" class="page-scroll">PC</a></li>
-        <li><a href="#services" class="page-scroll">PS4</a></li>
-        <li><a href="#portfolio" class="page-scroll">XBOX ONE</a></li>
-        <li class="dropdown">
-          <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">GAME-1</a></li>
-            <li><a href="#">GAME-2</a></li>
-            <li><a href="#">GAME-3</a></li>
-          </ul>
-        </li>
-        <li>
-          <form class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <input type="text" class="form-control" placeholder="Search">
-            </div>
-            <button type="submit" class="btn btn-default">Search</button>
-          </form>
-        </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <% if user_signed_in? %>
-        <li class="dropdown">
-          <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#"><b><%= current_user.full_name %></b>
-            <span class="caret"></span>
-          </a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Profile</a></li>
-            <% if current_user.is_admin %>
-            <li><a href="#">Admin</a></li>
-            <% end %>
-            <li><a href="#"><%= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>
-          </ul>
-        </li>
-        <% else %>
-        <li>
-          <%= link_to('Sign In', new_user_session_path) %>
-        </li>
-        <li>
-          <%= link_to('Sign Up', new_user_registration_path) %>
-        </li>
-        <% end %>
+<!--<nav id="menu" class="navbar navbar-default navbar-fixed-top">-->
+<!--  <div class="container">-->
+<!--    <div class="col-md-3">-->
+<!--      <a class="navbar-brand logo-header" href="#page-top">-->
+<!--        <img src="/assets/logo.jpg" alt="logo">-->
+<!--      </a>-->
+<!--    </div>-->
+<!--    <div class="collapse navbar-collapse col-md-9" id="bs-example-navbar-collapse-1 ">-->
+<!--      <ul class="nav navbar-nav navbar-left">-->
+<!--        <li><a href="#about" class="page-scroll">PC</a></li>-->
+<!--        <li><a href="#services" class="page-scroll">PS4</a></li>-->
+<!--        <li><a href="#portfolio" class="page-scroll">XBOX ONE</a></li>-->
+<!--        <li class="dropdown">-->
+<!--          <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#">MORE-->
+<!--            <span class="caret"></span>-->
+<!--          </a>-->
+<!--          <ul class="dropdown-menu">-->
+<!--            <li><a href="#">GAME-1</a></li>-->
+<!--            <li><a href="#">GAME-2</a></li>-->
+<!--            <li><a href="#">GAME-3</a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+<!--        <li>-->
+<!--          <form class="navbar-form navbar-left" role="search">-->
+<!--            <div class="form-group">-->
+<!--              <input type="text" class="form-control" placeholder="Search">-->
+<!--            </div>-->
+<!--            <button type="submit" class="btn btn-default">Search</button>-->
+<!--          </form>-->
+<!--        </li>-->
+<!--      </ul>-->
+<!--      <ul class="nav navbar-nav navbar-right">-->
+        <%# if user_signed_in? %>
+<!--        <li class="dropdown">-->
+<!--          <a class="dropdown-toggle dropdown-background-color" data-toggle="dropdown" href="#"><b><%#= current_user.full_name %></b>-->
+<!--            <span class="caret"></span>-->
+<!--          </a>-->
+<!--          <ul class="dropdown-menu">-->
+<!--            <li><a href="#">Profile</a></li>-->
+            <%# if current_user.is_admin %>
+<!--            <li><a href="#">Admin</a></li>-->
+            <%# end %>
+<!--            <li><a href="#"><%#= link_to('Sign Out', destroy_user_session_path, method: :delete) %> </a></li>-->
+<!--          </ul>-->
+<!--        </li>-->
+        <%# else %>
+<!--        <li>-->
+          <%#= link_to('Sign In', new_user_session_path) %>
+<!--        </li>-->
+<!--        <li>-->
+          <%#= link_to('Sign Up', new_user_registration_path) %>
+<!--        </li>-->
+        <%# end %>
 
-      </ul>
-    </div>
-  </div>
-</nav>
+<!--      </ul>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</nav>-->
 
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
@@ -85,7 +85,7 @@
         <div class="row">
             <div class="col-md-9">
                 <div class="col-md-12">
-                    <div class="col-xs-12 col-md-5"> 
+                    <div class="col-xs-12 col-md-5">
                     <%= image_tag(@game.photos.first.image, :class => "img-responsive") %>
                     </div>
                     <div class="col-xs-12 col-md-7">
@@ -139,7 +139,7 @@
                         <div class="section-title">
                             <h2>Review Game</h2>
                         </div>
-                        
+
                         <div class="header-rating"><%= @game.reviews.count() %> Rating Detail</div>
                         <div class="col-md-12">
                             <div class="row">
@@ -165,8 +165,8 @@
                                             </a>
                                             <strong class="space-i"><%= review.comments.count()%> comments</strong>
                                             <strong class="space-i"><a href="#"><strong>see review</strong></a></strong>
-                                            <strong><a href="#">Edit</a> | 
-                                                <a href="#">Delete</a>  
+                                            <strong><a href="#">Edit</a> |
+                                                <a href="#">Delete</a>
                                             </strong>
                                         </div>
                                     </div>
@@ -191,8 +191,8 @@
                                                         </a>
                                                     </div>
                                                     <div class="text-right">
-                                                        <strong><a href="#">Edit</a> | 
-                                                            <a href="#">Delete</a>  
+                                                        <strong><a href="#">Edit</a> |
+                                                            <a href="#">Delete</a>
                                                         </strong>
                                                     </div>
                                                 </div>
@@ -202,7 +202,7 @@
                                     </div>
                                 </div>
                                 <% end %>
-                            
+
                             </div>
                         </div>
                     </div>
@@ -316,70 +316,71 @@
             </div>
         </div>
     </div>
-    <!-- Contact Section -->
-    <div id="contact">
-        <div class="container">
-            <div class="col-md-8">
-                <div class="row">
-                    <div class="section-title">
-                        <h2>Get In Touch</h2>
-                        <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>
-                    </div>
-                    <form name="sentMessage" id="contactForm" novalidate>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="text" id="name" class="form-control" placeholder="Name" required="required">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <input type="email" id="email" class="form-control" placeholder="Email" required="required">
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>
-                            <p class="help-block text-danger"></p>
-                        </div>
-                        <div id="success"></div>
-                        <button type="submit" class="btn btn-custom btn-lg">Send Message</button>
-                    </form>
-                </div>
-            </div>
-            <div class="col-md-3 col-md-offset-1 contact-info">
-                <div class="contact-item">
-                    <h4>Contact Info</h4>
-                    <p><span>Address</span>4321 California St,<br>
-                        San Francisco, CA 12345</p>
-                    </div>
-                    <div class="contact-item">
-                        <p><span>Phone</span> +1 123 456 1234</p>
-                    </div>
-                    <div class="contact-item">
-                        <p><span>Email</span> info@company.com</p>
-                    </div>
-            </div>
-            <div class="col-md-12">
-                    <div class="row">
-                        <div class="social">
-                            <ul>
-                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-            </div>
-        </div>
-    </div>
 </div>
-        <!-- Footer Section -->
-<div id="footer">
-    <div class="container text-center">
-        <p>&copy; 2018 Design by  <a href="http://www.templatewire.com" rel="nofollow"> KYUU-RY TEAM</a></p>
-    </div>
-</div>
+<!--    <!-- Contact Section -->-->
+<!--    <div id="contact">-->
+<!--        <div class="container">-->
+<!--            <div class="col-md-8">-->
+<!--                <div class="row">-->
+<!--                    <div class="section-title">-->
+<!--                        <h2>Get In Touch</h2>-->
+<!--                        <p>Please fill out the form below to send us an email and we will get back to you as soon as possible.</p>-->
+<!--                    </div>-->
+<!--                    <form name="sentMessage" id="contactForm" novalidate>-->
+<!--                        <div class="row">-->
+<!--                            <div class="col-md-6">-->
+<!--                                <div class="form-group">-->
+<!--                                    <input type="text" id="name" class="form-control" placeholder="Name" required="required">-->
+<!--                                    <p class="help-block text-danger"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-md-6">-->
+<!--                                <div class="form-group">-->
+<!--                                    <input type="email" id="email" class="form-control" placeholder="Email" required="required">-->
+<!--                                    <p class="help-block text-danger"></p>-->
+<!--                                </div>-->
+<!--                            </div>-->
+<!--                        </div>-->
+<!--                        <div class="form-group">-->
+<!--                            <textarea name="message" id="message" class="form-control" rows="4" placeholder="Message" required></textarea>-->
+<!--                            <p class="help-block text-danger"></p>-->
+<!--                        </div>-->
+<!--                        <div id="success"></div>-->
+<!--                        <button type="submit" class="btn btn-custom btn-lg">Send Message</button>-->
+<!--                    </form>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="col-md-3 col-md-offset-1 contact-info">-->
+<!--                <div class="contact-item">-->
+<!--                    <h4>Contact Info</h4>-->
+<!--                    <p><span>Address</span>4321 California St,<br>-->
+<!--                        San Francisco, CA 12345</p>-->
+<!--                    </div>-->
+<!--                    <div class="contact-item">-->
+<!--                        <p><span>Phone</span> +1 123 456 1234</p>-->
+<!--                    </div>-->
+<!--                    <div class="contact-item">-->
+<!--                        <p><span>Email</span> info@company.com</p>-->
+<!--                    </div>-->
+<!--            </div>-->
+<!--            <div class="col-md-12">-->
+<!--                    <div class="row">-->
+<!--                        <div class="social">-->
+<!--                            <ul>-->
+<!--                                <li><a href="#"><i class="fa fa-facebook"></i></a></li>-->
+<!--                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
+<!--                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>-->
+<!--                                <li><a href="#"><i class="fa fa-youtube"></i></a></li>-->
+<!--                            </ul>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--        <!-- Footer Section -->-->
+<!--<div id="footer">-->
+<!--    <div class="container text-center">-->
+<!--        <p>&copy; 2018 Design by  <a href="http://www.templatewire.com" rel="nofollow"> KYUU-RY TEAM</a></p>-->
+<!--    </div>-->
+<!--</div>-->
