--- a/app/views/manage/home/index.html.erb
+++ b/app/views/manage/home/index.html.erb
@@ -82,9 +82,10 @@
           <div class="icon">
             <i class="ion ion-bag"></i>
           </div>
-          <%= link_to manage_top_reviews_path class: "small-box-footer" do %>
-            More info <i class="fa fa-arrow-circle-right"></i>
+          <%= link_to manage_top_reviews_path do %>
+            <b class="small-box-footer bg-aqua">More info</b>
           <% end %>
+          <i class="fa fa-arrow-circle-right"></i>
         </div>
       </div>
       <!-- ./col -->
@@ -99,9 +100,10 @@
           <div class="icon">
             <i class="ion ion-stats-bars"></i>
           </div>
-          <%= link_to manage_new_users_path class: "small-box-footer" do %>
-            More info <i class="fa fa-arrow-circle-right"></i>
+          <%= link_to manage_new_users_path do %>
+            <b class="small-box-footer bg-aqua">More info</b>
           <% end %>
+          <i class="fa fa-arrow-circle-right"></i>
 
           <!--          <a href="#" class="small-box-footer">More info <i class="fa fa-arrow-circle-right"></i></a>-->
         </div>
