--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,43 +1,52 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
 
+<head>
+  <!-- <title>Website</title> -->
+  <title><%= yield :page_title %></title>
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+
+</head>
+<div class="limiter">
+  <div class="container-login100" style="background-image: url('../assets/slider/1.jpg');">
+    <div class="wrap-login100">
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
-    <% end %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter username">
+          <%= f.text_field :full_name, placeholder:"Title", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter username">
+          <%= f.text_field :email, placeholder:"Title", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter username">
+          <%= f.file_field :avatar , placeholder:"Avatar", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter new password">
+          <%= f.password_field :password, placeholder:"new password", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate = "Confirm password">
+          <%= f.password_field :password_confirmation, placeholder:"new password", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="wrap-input100 validate-input" data-validate = "Enter current password">
+          <%= f.password_field :current_password, placeholder:"Current password", class:"input100"%>
+          <span class="focus-input100" data-placeholder=""></span>
+        </div>
+        <div class="actions" >
+          <%= f.submit "Update", class:"login100-form-btn"%>
+        </div>
+   
 <% end %>
 
 <h3>Cancel my account</h3>
 
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
-<%= link_to "Back", :back %>
+    </div>
+  </div>
+</div>
