--- a/app/views/user_profile/home.html.erb
+++ b/app/views/user_profile/home.html.erb
@@ -29,22 +29,26 @@
             <div class="tab-content">
                 <div class="tab-pane active" id="Reviews">
                     <br><br>
+                    
                     <div class="panel panel-default">
                         <div class="panel-body">
                             <span>
                                 <h1 class="panel-title pull-left" style="font-size:30px;"><%=@user.full_name%> <small><%= @user.email%></small> <i class="fa fa-check text-success" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="John Doe is sharing with you"></i></h1>
                             </span>
+                            <%if @current_user.id == @user.id %>
                             <br><br><hr>
                             <%= link_to "#",
                                 data: {
                                 toggle: "modal",
-                                url: edit_manage_user_path(@user),
+                                url: edit_user_registration_path(@user),
                                 target: "#user-form-edit"} do %>
                                 <i class="fa fa-pencil-square-o fa-lg"></i>
                                 Edit
                                 <% end %>
+                                <% end %>
                         </div>
                     </div>
+                    
                     <hr>
                     <!-- Sample post content with comments. -->
                     <%@reviews.each do |review| %>
@@ -211,15 +215,7 @@
         </div>
     </div>
 </div>
-<div id="review-form-edit" class="modal fade">
-  <div class="modal-dialog modal-content">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-      <h3>Create Game</h3>
-    </div>
-    <div class="modal-body"></div>
-  </div>
-</div>
+
 <div id="user-form-edit" class="modal fade">
   <div class="modal-dialog modal-content">
     <div class="modal-header">
