--- a/app/views/manage/platforms/index.html.erb
+++ b/app/views/manage/platforms/index.html.erb
@@ -38,7 +38,7 @@
             <% end %>
           </li>
           <li><%= link_to manage_platforms_path do %>
-              <i class="fa fa-circle-o"></i> Manage platform
+              <i class="fa fa-circle-o"></i> Manage Genre
             <% end %>
           </li>
           <li><%= link_to manage_platforms_path do %>
@@ -327,3 +327,9 @@
   <div class="modal-dialog modal-content">
   </div>
 </div>
+<script type="text/javascript">
+  $('#platform-form-edit').on("show.bs.modal", function(e) {
+        console.log("hello thangtqt platform");
+        $(this).find('.modal-content').load(e.relatedTarget.dataset.url);
+        });
+</script>>
