--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,7 +8,7 @@
 				Sign Up
 			</span>
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
+        <p style="color:red"><%= devise_error_messages! %></p> 
         <div class="wrap-input100 validate-input" data-validate = "Enter username">
           <%= f.email_field :email, placeholder:"Email", class:"input100"%>
           <span class="focus-input100" data-placeholder=""></span>
